# scrape-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  cliff.toml  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  codecov.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  labeler.yml  release.yml
benches/: compare_node.mjs  compare_python.py  compare_wasm.html  comparison.rs  navigation.rs
benches/fixtures/: generate.py
crates/scrape-cli/: Cargo.toml  README.md
crates/scrape-cli/src/: args.rs  batch.rs  extract.rs  fetch.rs  main.rs  repl.rs
crates/scrape-cli/src/output/: csv.rs  html.rs  json.rs  mod.rs  text.rs
crates/scrape-cli/tests/: cli_test.rs
crates/scrape-core/: Cargo.toml  README.md
crates/scrape-core/benches/: batch_processing.rs  fragment_and_extraction.rs  parse.rs  performance.rs  selector_optimization.rs  simd.rs  streaming.rs  streaming_memory.rs  traits_and_iterators.rs
crates/scrape-core/src/: error.rs  lib.rs  serialize.rs  soup.rs  tag.rs
crates/scrape-core/src/dom/: document.rs  mod.rs  node.rs
crates/scrape-core/src/parallel/: batch.rs
crates/scrape-core/src/parser/: error.rs  fragment.rs  html5.rs  mod.rs  sink.rs  tests.rs  warnings.rs
crates/scrape-core/src/query/: compiled.rs  error.rs  explain.rs  extraction.rs  filter.rs  find.rs  mod.rs  specificity.rs
crates/scrape-core/src/simd/: scan.rs
crates/scrape-core/src/streaming/: config.rs  element.rs  handlers.rs  mod.rs  parser.rs  rewriter.rs
crates/scrape-core/tests/: navigation.rs  phase19_edge_cases.rs  streaming.rs
crates/scrape-node/: Cargo.toml  README.md  biome.json  build.rs  index.d.ts  package.json  pnpm-lock.yaml
crates/scrape-node/npm/darwin-arm64/: package.json
crates/scrape-node/npm/darwin-x64/: package.json
crates/scrape-node/npm/linux-arm64-gnu/: package.json
crates/scrape-node/npm/linux-arm64-musl/: package.json
crates/scrape-node/npm/linux-x64-gnu/: package.json
crates/scrape-node/npm/linux-x64-musl/: package.json
crates/scrape-node/npm/win32-x64-msvc/: package.json
crates/scrape-node/src/: config.rs  error.rs  lib.rs  selector.rs  soup.rs  tag.rs
crates/scrape-node/tests/: basic.test.js  batch.test.js  fragment_and_extraction.test.js  navigation.test.js  selectors.test.js  shared.test.js  soup.test.js  tag.test.js
crates/scrape-py/: Cargo.toml  README.md  pyproject.toml
crates/scrape-py/python/scrape_rs/: __init__.py
crates/scrape-py/src/: config.rs  error.rs  lib.rs  tag.rs
crates/scrape-py/tests/: test_basic.py
crates/scrape-wasm/: Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml
crates/scrape-wasm/js/: index.d.ts
crates/scrape-wasm/scripts/: analyze-size.sh
crates/scrape-wasm/src/: config.rs  lib.rs  selector.rs  soup.rs  tag.rs
crates/scrape-wasm/tests/: shared.rs  web.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/getting-started/: concepts.md  installation.md  quick-start.md
docs/src/migration/: overview.md
docs/src/user-guide/: parsing.md  querying.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs  selector.rs
scripts/: bump-version.sh
tests/integration/: mod.rs
tests/shared/: test_cases.json
