[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["scrape-rs contributors"]
repository = "https://github.com/example/scrape-rs"
keywords = ["html", "parser", "scraping", "css-selectors", "dom"]
categories = ["parsing", "web-programming"]

[workspace.dependencies]
criterion = { version = "0.8", default-features = false }
html5ever = "0.37"
js-sys = "0.3"
markup5ever = "0.37"
markup5ever_rcdom = "0.36"
memchr = "2.7"
napi = "3"
napi-build = "2"
napi-derive = "3"
pyo3 = "0.27"
scrape-core = { path = "crates/scrape-core", default-features = false }
selectors = "0.34"
thiserror = "2.0"
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = "0.3"

[workspace.lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow certain pedantic lints that are too noisy
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.bench]
lto = true
codegen-units = 1
