[package]
name = "scrape-cli"
description = "Command-line HTML extraction tool powered by scrape-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = true

[[bin]]
name = "scrape"
path = "src/main.rs"

[features]
default = []
url = ["dep:ureq", "ureq/native-tls"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
csv.workspace = true
is-terminal.workspace = true
rayon.workspace = true
scrape-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
ureq = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints]
workspace = true
