[package]
name = "scrape-core"
description = "High-performance HTML parsing library core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
cssparser.workspace = true
html5ever.workspace = true
markup5ever.workspace = true
markup5ever_rcdom.workspace = true
memchr.workspace = true
precomputed-hash.workspace = true
selectors.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true

[features]
default = []
simd = []
parallel = []

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "simd"
harness = false
