[package]
name = "scrape-node"
description = "Node.js bindings for scrape-rs HTML parsing library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true, features = ["napi9"] }
napi-derive.workspace = true
rayon.workspace = true
scrape-core = { workspace = true, features = ["parallel", "simd"] }

[build-dependencies]
napi-build.workspace = true

[lints]
workspace = true
