[package]
name = "scrape-wasm"
description = "WebAssembly bindings for scrape-rs HTML parsing library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys.workspace = true
scrape-core.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd", "--enable-bulk-memory"]
