[package]
name = "scrape-wasm"
description = "WebAssembly bindings for scrape-rs HTML parsing library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
js-sys.workspace = true
scrape-core.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
wasm-bindgen-test.workspace = true

[lints]
workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-simd", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

